Polish book.bib

--- a/book.bib
+++ b/book.bib
@@ -20,7 +20,7 @@
   journal =	 {F1000Research},
   year =	 {2016},
   volume =	 5,
-  pages =	 1492,
+  pages =	 {1492},
   doi =		 {10.12688/f1000research.8986.2}
 }
 
@@ -115,7 +115,7 @@
   title =	 {Microbiome data science in the {\it
                   SummarizedExperiment} universe},
   journal =	 {F1000Research},
-  year =	 2021,
+  year =	 {2021},
   volume =	 10,
   number =	 748,
   note =	 {(slides); version 1; not peer reviewed},
@@ -126,7 +126,7 @@
   author =	 {R McElreath},
   title =	 {Statistical Rethinking},
   publisher =	 {Chapman and Hall/CRC},
-  year =	 2020,
+  year =	 {2020},
   note =	 {with implementation by Solomon Kurz:
                   https://bookdown.org/ajkurz/Statistical\_Rethinking\_recoded/}
 }
@@ -136,7 +136,7 @@
   title =	 "{UMAP: Uniform Manifold Approximation and Projection
                   for Dimension Reduction}",
   journal =	 {arXiv e-prints},
-  year =	 2018,
+  year =	 {2018},
   pages =	 {arXiv:1802.03426},
   url =		 {https://arxiv.org/abs/1802.03426},
 }
@@ -151,7 +151,7 @@
   issue =	 4,
   pages =	 {e61217},
   doi =		 {10.1371/journal.pone.0061217},
-  year =	 2013
+  year =	 {2013}
 }
 
 @Article{Huang2021,
@@ -164,7 +164,7 @@
   volume =	 9,
   pages =	 1246,
   doi =		 {https://doi.org/10.12688/f1000research.26669.2},
-  year =	 2021,
+  year =	 {2021},
   annote =	 {TreeSE reference},
   keywords =	 {bioscience}
 }
@@ -178,8 +178,8 @@
   journal =	 {Nucleic Acids Research},
   volume =	 41,
   issue =	 {D1},
-  pages =	 D590-D596,
-  year =	 2013,
+  pages =	 {D590-D596},
+  year =	 {2013},
   annote =	 {SILVA database reference},
   keywords =	 {bioscience}
 }
@@ -209,7 +209,7 @@
   volume =	 12,
   pages =	 277,
   month =	 {February},
-  year =	 2021,
+  year =	 {2021},
   doi =		 {10.3389/fmicb.2021.635781},
   keywords =	 {bioscience}
 }
@@ -235,7 +235,7 @@
   title =	 {Orchestrating Single-Cell Analysis with
                   Bioconductor},
   publisher =	 {Bioconductor},
-  year =	 2020,
+  year =	 {2020},
   url =		 {https://bioconductor.org/books/release/OSCA/}
 }
 
@@ -250,7 +250,7 @@
   title =	 {Orchestrating single-cell analysis with
                   Bioconductor},
   journal =	 {Nature Methods},
-  year =	 2020,
+  year =	 {2020},
   volume =	 17,
   pages =	 {137--145},
   doi =		 {10.1038/s41592-019-0654-x}
@@ -264,7 +264,7 @@
   volume =	 62,
   pages =	 {245--253},
   doi =		 {10.1111/j.1541-0420.2005.00440.x},
-  year =	 2006
+  year =	 {2006}
 }
 
 @article{Argelaguet2018,
@@ -275,7 +275,7 @@
   number =	 6,
   pages =	 {e8124},
   doi =	 	 {10.15252/msb.20178124},
-  year =	 2018
+  year =	 {2018}
 }
 
 @article{Chao1984,
@@ -286,7 +286,7 @@
     number = {4},
     pages = {265-270},
     url = {https://www.jstor.org/stable/4615964},
-    year = 1984
+    year =	 {1984}
 }
 
 @article{Chao1992,
@@ -298,7 +298,7 @@
     pages = {210-217},
     doi = {https://doi.org/10.1080/01621459.1992.10475194},
     url = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1992.10475194#.YHFw5egzaHu},
-    year = 1992
+    year =	 {1992}
 }
 
 @article{Faith1992,
@@ -310,7 +310,7 @@
     pages = {10},
     doi = {https://doi.org/10.1016/0006-3207(92)91201-3},
     url = {https://www.sciencedirect.com/science/article/pii/0006320792912013?via%3Dihub},
-    year = 1992
+    year =	 {1992}
 }
 
 @Article{Friedman2012,
@@ -318,7 +318,7 @@
   title =	 {Inferring Correlation Networks from Genomic Survey
                   Data},
   journal =	 {{PLoS Computational Biology}},
-  year =	 2012,
+  year =	 {2012},
   volume =	 8,
   number =	 9,
   pages =	 {e1002687},
@@ -329,7 +329,7 @@
 @Article{GenomicRanges2013,
     title = {Software for Computing and Annotating Genomic Ranges},
     author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
-    year = 2013,
+    year =	 {2013},
     journal = {{PLoS} Computational Biology},
     volume = {9},
     issue = {8},
@@ -350,7 +350,7 @@
   title =	 {Bioconductor: open software development for
                   computational biology and bioinformatics},
   journal =	 {Genome Biology},
-  year =	 2004,
+  year =	 {2004},
   volume =	 5,
   pages =	 {R80},
   annote =	 {Original Bioconductor reference}
@@ -360,7 +360,7 @@
   author =	 {Garret Grolemund and Hadley Wickham},
   title =	 {R for Data Science},
   publisher =	 {O’Reilly},
-  year =	 2017,
+  year =	 {2017},
   volume =	 {77(21); e39-42},
 }
 
@@ -369,7 +369,7 @@
                   others},
   title =	 {Orchestrating Microbiome Analysis with Bioconductor
                   [beta version]},
-  year =	 2021,
+  year =	 {2021},
   url =		 {microbiome.github.io/oma/}
 }
 
@@ -384,13 +384,13 @@
   volume =	 14,
   issue =	 11,
   pages =	 {1023–1024},
-  year =	 2017,
+  year =	 {2017},
   doi =		 {10.1038/nmeth.4468}
 }
 
 @article{Pons2006,
   author =	 {Pons, P and Latapy, M},
-  year =	 2006,
+  year =	 {2006},
   month =	 01,
   pages =	 {191-218},
   title =	 {Computing Communities in Large Networks Using Random
@@ -407,7 +407,7 @@
                   Proportionally Abundant Features Using Compositional
                   Data Analysis},
   journal =	 {Scientific Reports},
-  year =	 2017,
+  year =	 {2017},
   volume =	 7,
   pages =	 16252,
   doi =		 {10.1038/s41598-017-16520-0}
@@ -417,7 +417,7 @@
   title =	 {Biobase: Base functions for Bioconductor},
   author =	 {R. Gentleman and V. Carey and M. Morgan and
                   S. Falcon},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.50.0},
   url =		 {https://bioconductor.org/packages/Biobase},
 }
@@ -426,7 +426,7 @@
   title =	 {BiocGenerics: S4 generic functions used in
                   Bioconductor},
   author =	 {The Bioconductor Dev Team},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.36.0},
   url =		 {https://bioconductor.org/packages/BiocGenerics},
 }
@@ -436,7 +436,7 @@
                   strings},
   author =	 {H. Pagès and P. Aboyoun and R. Gentleman and
                   S. DebRoy},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.58.0},
   url =		 {https://bioconductor.org/packages/Biostrings},
 }
@@ -445,7 +445,7 @@
   title =	 {DECIPHER: Tools for curating, analyzing, and
                   manipulating biological sequences},
   author =	 {Erik Wright},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.18.1},
 }
 
@@ -455,7 +455,7 @@
                   particular naming style},
   author =	 {Sonali Arora and Martin Morgan and Marc Carlson and
                   H. Pagès},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.26.2},
   url =		 {https://bioconductor.org/packages/GenomeInfoDb},
 }
@@ -464,7 +464,7 @@
   title =	 {IRanges: Foundation of integer range manipulation in
                   Bioconductor},
   author =	 {H. Pagès and P. Aboyoun and M. Lawrence},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.24.0},
   url =		 {https://bioconductor.org/packages/IRanges},
 }
@@ -474,7 +474,7 @@
                   Functions that Operate on Matrix-Like Objects},
   author =	 {Constantin Ahlmann-Eltze and Peter Hickey and Hervé
                   Pagès},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.2.0},
   url =		 {https://bioconductor.org/packages/MatrixGenerics},
 }
@@ -483,7 +483,7 @@
   title =	 {S4Vectors: Foundation of vector-like and list-like
                   containers in Bioconductor},
   author =	 {H. Pagès and M. Lawrence and P. Aboyoun},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.28.0},
   url =		 {https://bioconductor.org/packages/S4Vectors},
 }
@@ -492,7 +492,7 @@
   title =	 {SingleCellExperiment: S4 Classes for Single Cell
                   Data},
   author =	 {Aaron Lun and Davide Risso},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.12.0},
 }
 
@@ -501,7 +501,7 @@
                   container},
   author =	 {Martin Morgan and Valerie Obenchain and Jim Hester
                   and Hervé Pagès},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.20.0},
   url =
                   {https://bioconductor.org/packages/SummarizedExperiment},
@@ -511,7 +511,7 @@
   title =	 {TreeSummarizedExperiment: a S4 Class for Data with
                   Tree Structures},
   author =	 {Ruizhu Huang},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.6.2},
 }
 
@@ -519,7 +519,7 @@
   title =	 {XVector: Foundation of external vector
                   representation and manipulation in Bioconductor},
   author =	 {Hervé Pagès and Patrick Aboyoun},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.30.0},
   url =		 {https://bioconductor.org/packages/XVector},
 }
@@ -530,14 +530,14 @@
   author =	 {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address =	 {Vienna, Austria},
-  year =	 2020,
+  year =	 {2020},
   url =		 {https://www.R-project.org/},
 }
 
 @Manual{R-bluster,
   title =	 {{bluster: Clustering Algorithms for Bioconductor}},
   author =	 {Aaron Lun},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 1.3.0},
   url =
                   {https://bioconductor.org/packages/3.14/bioc/html/bluster.html},
@@ -552,14 +552,14 @@
   journal =	 {Nature Methods},
   volume =	 13,
   pages =	 {581-583},
-  year =	 2016,
+  year =	 {2016},
   doi =		 {10.1038/nmeth.3869},
 }
 
 @Manual{R-ggpubr,
   title =	 {ggpubr: ggplot2 Based Publication Ready Plots},
   author =	 {Alboukadel Kassambara},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.4.0},
   url =		 {https://rpkgs.datanovia.com/ggpubr/},
 }
@@ -568,7 +568,7 @@
   title =	 {knitr: A General-Purpose Package for Dynamic Report
                   Generation in R},
   author =	 {Yihui Xie},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.30},
   url =		 {https://yihui.org/knitr/},
 }
@@ -577,7 +577,7 @@
   title =	 {matrixStats: Functions that Apply to Rows and
                   Columns of Matrices (and to Vectors)},
   author =	 {Henrik Bengtsson},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.57.0},
   url =		 {https://github.com/HenrikBengtsson/matrixStats},
 }
@@ -585,7 +585,7 @@
 @Manual{R-mia,
   title =	 {mia: Microbiome analysis},
   author =	 {Felix G.M. Ernst and Sudarshan Shetty and Leo Lahti},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 0.98.15},
 }
 
@@ -596,7 +596,7 @@
                   Helmus and William K Cornwell and Helene Morlon and
                   David D Ackerly and Simon P Blomberg and Campbell O
                   Webb},
-  year =	 2010,
+  year =	 {2010},
   note =	 {R package version 1.8.2},
   url =		 {https://cran.r-project.org/web/packages/picante},
 }
@@ -607,7 +607,7 @@
                   Javier Luraschi and Kevin Ushey and Aron Atkins and
                   Hadley Wickham and Joe Cheng and Winston Chang and
                   Richard Iannone},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.5},
   url =		 {https://github.com/rstudio/rmarkdown},
 }
@@ -617,7 +617,7 @@
                   Expression Data in R},
   author =	 {Davis McCarthy and Kieran Campbell and Aaron Lun and
                   Quin Wills},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 1.18.3},
   url =		 {http://bioconductor.org/packages/scater/},
 }
@@ -629,7 +629,7 @@
                   Dan McGlinn and Peter R. Minchin and R. B. O'Hara
                   and Gavin L. Simpson and Peter Solymos and M. Henry
                   H. Stevens and Eduard Szoecs and Helene Wagner},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R package version 2.5-7},
   url =		 {https://CRAN.R-project.org/package=vegan},
 }
@@ -641,7 +641,7 @@
   journal =	 {Journal of Computational and Applied Mathematics},
   volume =	 20,
   pages =	 {53-65},
-  year =	 1987,
+  year =	 {1987},
   doi =		 {https://doi.org/10.1016/0377-0427(87)90125-7},
   url =
                   {https://www.sciencedirect.com/science/article/pii/0377042787901257},
@@ -663,7 +663,7 @@
   issue =	 1,
   pages =	 {1-8},
   url =		 {https://www.nature.com/articles/s41467-021-22962-y},
-  year =	 2021
+  year =	 {2021}
 }
 
 @Article{Shen2021,
@@ -671,7 +671,7 @@
   title =	 {{CARlasso}: An {R} package for the estimation of
                   sparse microbial networks with predictors},
   journal =	 {{arXiv} preprint},
-  year =	 2021,
+  year =	 {2021},
   note =	 {arXiv:2107.13763 [stat.AP]},
   url =		 {https://arxiv.org/abs/2107.13763}
 }
@@ -680,7 +680,7 @@
   author =	 {Sudarshan Shetty and Leo Lahti},
   title =	 {Microbiome data science},
   journal =	 {Journal of Biosciences},
-  year =	 2019,
+  year =	 {2019},
   volume =	 44,
   pages =	 115,
   month =	 {October},
@@ -701,7 +701,7 @@
                   and Herve Pages and Mike Smith and Wolfgang Huber
                   and Martin Morgan and Raphael Gottardo and Stephanie
                   Hicks},
-  year =	 2020,
+  year =	 {2020},
   volume =	 17,
   pages =	 {137--145},
   journal =	 {Nature Methods},
@@ -722,7 +722,7 @@
   title =	 {Variation in Microbiome LPS Immunogenicity
                   Contributes to Autoimmunity in Humans},
   journal =	 {Cell},
-  year =	 2016,
+  year =	 {2016},
   volume =	 165,
   pages =	 {842--853},
   month =	 {May},
@@ -743,14 +743,14 @@
                   {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.2307/1943563},
   eprint =
                   {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.2307/1943563},
-  year =	 1960
+  year =	 {1960}
 }
 
 @article{ancombc2020,
   title =	 {Analysis of compositions of microbiomes with bias
                   correction},
   author =	 {Huang Lin and Shyamal Das Peddada},
-  year =	 2020,
+  year =	 {2020},
   journal =	 {Nature communications},
   volume =	 11,
   number =	 1,
@@ -767,7 +767,7 @@
   volume =	 12,
   number =	 6,
   pages =	 {1050--1061},
-  year =	 2021,
+  year =	 {2021},
   publisher =	 {Wiley Online Library}
 }
 
@@ -777,7 +777,7 @@
                   Khamiakova and Martin Sill and Roberto Theron and
                   Luis Quintales and Friedrich Leisch and Ewoud {De
                   Troyer} and Sami Leon.},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 2.0.3},
   url =		 {https://CRAN.R-project.org/package=biclust},
 }
@@ -788,7 +788,7 @@
   author =	 {Y Xie},
   publisher =	 {Chapman and Hall/CRC},
   address =	 {Boca Raton, Florida},
-  year =	 2016,
+  year =	 {2016},
   note =	 {ISBN 978-1138700109},
   url =		 {https://github.com/rstudio/bookdown},
 }
@@ -796,7 +796,7 @@
 @techreport{Chambers2006,
   title =	 {How s4 methods work},
   author =	 {Chambers, JM},
-  year =	 2006,
+  year =	 {2006},
   institution =	 {Technical report}
 }
 
@@ -804,7 +804,7 @@
   title =	 {Software for data analysis: programming with R},
   author =	 {Chambers, John M},
   volume =	 2,
-  year =	 2008,
+  year =	 {2008},
   publisher =	 {Springer}
 }
 
@@ -812,7 +812,7 @@
   title =	 {corncob: Count Regression for Correlated
                   Observations with the Beta-Binomial},
   author =	 {Bryan D Martin and Daniela Witten and Amy D Willis},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 0.2.0},
   url =		 {https://CRAN.R-project.org/package=corncob},
 }
@@ -821,7 +821,7 @@
   title =	 {Moderated estimation of fold change and dispersion
                   for RNA-seq data with DESeq2},
   author =	 {Michael I. Love and Wolfgang Huber and Simon Anders},
-  year =	 2014,
+  year =	 {2014},
   journal =	 {Genome Biology},
   doi =		 {10.1186/s13059-014-0550-8},
   volume =	 15,
@@ -834,7 +834,7 @@
   title =	 {From reads to genes to pathways: differential
                   expression analysis of RNA-Seq experiments using
                   Rsubread and the edgeR quasi-likelihood pipeline},
-  year =	 2016,
+  year =	 {2016},
   journal =	 {F1000Research},
   volume =	 5,
   pages =	 1438,
@@ -846,7 +846,7 @@
                   Marginally Latent Matrix-T Processes},
   author =	 {Justin D Silverman and Kim Roche and Zachary C
                   Holmes and Lawrence A David and Sayan Mukherjee},
-  year =	 2019,
+  year =	 {2019},
   journal =	 {arXiv e-prints},
   url =		 {https://arxiv.org/abs/1903.11695},
 }
@@ -854,7 +854,7 @@
 @book{gentleman2008r,
   title =	 {R programming for bioinformatics},
   author =	 {Gentleman, Robert},
-  year =	 2008,
+  year =	 {2008},
   publisher =	 {CRC Press}
 }
 
@@ -867,7 +867,7 @@
   volume =	 32,
   number =	 18,
   pages =	 {2847--2849},
-  year =	 2016,
+  year =	 {2016},
   publisher =	 {Oxford University Press}
 }
 
@@ -885,7 +885,7 @@
   volume =	 18,
   number =	 8,
   pages =	 4049,
-  year =	 2021,
+  year =	 {2021},
   publisher =	 {Multidisciplinary Digital Publishing Institute}
 }
 
@@ -893,14 +893,14 @@
   title =	 {ExperimentHub: Client to access ExperimentHub
                   resources},
   author =	 {Martin Morgan and Lori Shepherd},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 2.2.0}
 }
 
 @Article{Schep2017,
   author =	 {Alicia N Schep and Sarah K Kummerfeld},
   title =	 {iheatmapr: Interactive complex heatmaps in R},
-  year =	 2017,
+  year =	 {2017},
   journal =	 {Journal of Open Source Software},
   url =		 {http://dx.doi.org/10.21105/joss.00359},
   doi =		 {10.21105/joss.00359}
@@ -914,7 +914,7 @@
                   Research in {R}},
   author =	 {Yihui Xie},
   publisher =	 {Chapman and Hall/CRC},
-  year =	 2014,
+  year =	 {2014},
   note =	 {ISBN 978-1466561595},
   url =		 {http://www.crcpress.com/product/isbn/9781466561595}
 }
@@ -924,7 +924,7 @@
   author =	 {Yihui Xie},
   publisher =	 {Chapman and Hall/CRC},
   address =	 {Boca Raton, Florida},
-  year =	 2015,
+  year =	 {2015},
   edition =	 {2nd},
   note =	 {ISBN 978-1498716963},
   url =		 {https://yihui.org/knitr/}
@@ -934,7 +934,7 @@
   title =	 {lefser: R implementation of the LEfSE method for
                   microbiome biomarker discovery},
   author =	 {Asya Khleborodova},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 1.4.0},
   url =		 {https://github.com/waldronlab/lefser}
 }
@@ -946,7 +946,7 @@
   title =	 {{limma} powers differential expression analyses for
                   {RNA}-sequencing and microarray studies},
   journal =	 {Nucleic Acids Research},
-  year =	 2015,
+  year =	 {2015},
   volume =	 43,
   number =	 7,
   pages =	 {e47},
@@ -957,7 +957,7 @@
   title =	 {Analysis of Compositions of Microbiomes with Bias
                   Correction},
   author =	 {Lin, Huang and Peddada, Shyamal Das},
-  year =	 2020,
+  year =	 {2020},
   month =	 dec,
   journal =	 {Nat Commun},
   volume =	 11,
@@ -976,7 +976,7 @@
                   Population-scale Meta-omics Studies.},
   author =	 {Himel Mallick and Ali Rahnavard and Lauren
                   J. McIver},
-  year =	 2020,
+  year =	 {2020},
   note =	 {R/Bioconductor package},
   url =		 {http://huttenhower.sph.harvard.edu/maaslin2},
 }
@@ -985,7 +985,7 @@
   title =	 {Longitudinal differential abundance analysis of
                   marker-gene surveys using smoothing splines},
   author =	 {JN Paulson and H Talukder and HC Bravo},
-  year =	 2017,
+  year =	 {2017},
   journal =	 {biorxiv},
   doi =		 {10.1101/099457},
   url =		 {https://www.biorxiv.org/content/10.1101/099457v1},
@@ -997,13 +997,13 @@
                   Karoline Faust},
   url =		 {microbiome.github.io/miaSim},
   note =	 {Version 1.0.0},
-  year = 2021
+  year =   {2021}
 }
 
 @Manual{Lahti2021,
   title =	 {miaTime: time series analysis},
   author =	 {L Lahti},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 0.1.0}
 }
 
@@ -1011,7 +1011,7 @@
   title =	 {miaViz: Microbiome Analysis Plotting and
                   Visualization},
   author =	 {Felix G.M. Ernst and Tuomas Borman and Leo Lahti},
-  year =	 2022,
+  year =	 {2022},
   note =	 {R package version 1.2.1}
 }
 
@@ -1019,14 +1019,14 @@
   title =	 {microbiomeDataSets: Experiment Hub based microbiome
                   datasets},
   author =	 {Leo Lahti and Felix G.M. Ernst and Sudarshan Shetty},
-  year =	 2021,
+  year =	 {2021},
   note =	 {R package version 1.2.0}
 }
 
 @Manual{Pedersen2022,
   title =	 {patchwork: The Composer of Plots},
   author =	 {Thomas Lin Pedersen},
-  year =	 2022,
+  year =	 {2022},
   note =	 {https://patchwork.data-imaginist.com,
                   https://github.com/thomasp85/patchwork}
 }
@@ -1036,7 +1036,7 @@
                   compositional microbiota data},
   author =	 {Justin D Silverman and Alex D Washburne and Sayan
                   Mukherjee and Lawrence A David},
-  year =	 2017,
+  year =	 {2017},
   journal =	 {eLife},
   volume =	 6,
   doi =		 {10.7554/eLife.21887},
@@ -1048,7 +1048,7 @@
   title =	 {Interactive Web-Based Data Visualization with R,
                   plotly, and shiny},
   publisher =	 {Chapman and Hall/CRC},
-  year =	 2020,
+  year =	 {2020},
   isbn =	 9781138331457,
   url =		 {https://plotly-r.com}
 }
@@ -1057,27 +1057,12 @@
   title =	{A {{Critique}} of {{Differential Abundance
                   Analysis}}, and {{Advocacy}} for an {{Alternative}}},
   author = {Quinn, Thomas P. and Gordon-Rodriguez, Elliott and Erb, Ionas},
-  year = 2021,
+  year =	 {2021},
   month =	apr,
   journal =	{arXiv:2104.07266 [q-bio, stat]},
   eprint = {2104.07266},
   eprinttype = {arxiv},
   primaryclass = {q-bio, stat},
-  abstract = {It is largely taken for granted that differential
-                  abundance analysis is, by default, the best first
-                  step when analyzing genomic data. We argue that this
-                  is not necessarily the case. In this article, we
-                  identify key limitations that are intrinsic to
-                  differential abundance analysis: it is (a) dependent
-                  on unverifiable assumptions, (b) an unreliable
-                  construct, and (c) overly reductionist. We formulate
-                  an alternative framework called ratio-based
-                  biomarker analysis which does not suffer from the
-                  identified limitations. Moreover, ratio-based
-                  biomarkers are highly flexible. Beyond replacing
-                  DAA, they can also be used for many other bespoke
-                  analyses, including dimension reduction and
-                  multi-omics data integration.},
   archiveprefix ={arXiv},
   langid =	 {english}
 }
@@ -1087,7 +1072,7 @@
   author =	 {Yihui Xie and J.J. Allaire and Garrett Grolemund},
   publisher =	 {Chapman and Hall/CRC},
   address =	 {Boca Raton, Florida},
-  year =	 2018,
+  year =	 {2018},
   note =	 {ISBN 9781138359338},
   url =		 {https://bookdown.org/yihui/rmarkdown}
 }
@@ -1098,7 +1083,7 @@
                   Riederer},
   publisher =	 {Chapman and Hall/CRC},
   address =	 {Boca Raton, Florida},
-  year =	 2020,
+  year =	 {2020},
   note =	 {ISBN 9780367563837},
   url =		 {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
@@ -1106,7 +1091,7 @@
 @article{Nearing2022,
   title = {Microbiome Differential Abundance Methods Produce Different Results across 38 Datasets},
   author = {Nearing, Jacob T. and Douglas, Gavin M. and Hayes, Molly G. and MacDonald, Jocelyn and Desai, Dhwani K. and Allward, Nicole and Jones, Casey M. A. and Wright, Robyn J. and Dhanani, Akhilesh S. and Comeau, Andr{\'e} M. and Langille, Morgan G. I.},
-  year = 2022,
+  year =	 {2022},
   month = dec,
   journal = {Nature Communications},
   volume = {13},
@@ -1114,7 +1099,6 @@
   pages = {342},
   issn = {2041-1723},
   doi = {10.1038/s41467-022-28034-z},
-  abstract = {Abstract             Identifying differentially abundant microbes is a common goal of microbiome studies. Multiple methods are used interchangeably for this purpose in the literature. Yet, there are few large-scale studies systematically exploring the appropriateness of using these tools interchangeably, and the scale and significance of the differences between them. Here, we compare the performance of 14 differential abundance testing methods on 38 16S rRNA gene datasets with two sample groups. We test for differences in amplicon sequence variants and operational taxonomic units (ASVs) between these groups. Our findings confirm that these tools identified drastically different numbers and sets of significant ASVs, and that results depend on data pre-processing. For many tools the number of features identified correlate with aspects of the data, such as sample size, sequencing depth, and effect size of community differences. ALDEx2 and ANCOM-II produce the most consistent results across studies and agree best with the intersect of results from different approaches. Nevertheless, we recommend that researchers should use a consensus approach based on multiple differential abundance methods to help ensure robust biological interpretations.},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/RL7S8KYH/Nearing et al. - 2022 - Microbiome differential abundance methods produce .pdf}
 }
@@ -1123,14 +1107,13 @@
   title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
   shorttitle = {Analysis of Composition of Microbiomes},
   author = {Mandal, Siddhartha and Van Treuren, Will and White, Richard A. and Eggesb{\o}, Merete and Knight, Rob and Peddada, Shyamal D.},
-  year = 2015,
+  year =	 {2015},
   month = may,
   journal = {Microbial Ecology in Health \& Disease},
   volume = {26},
   number = {0},
   issn = {1651-2235},
   doi = {10.3402/mehd.v26.27663},
-  abstract = {Background: Understanding the factors regulating our microbiota is important but requires appropriate statistical methodology. When comparing two or more populations most existing approaches either discount the underlying compositional structure in the microbiome data or use probability models such as the multinomial and Dirichlet-multinomial distributions, which may impose a correlation structure not suitable for microbiome data. Objective: To develop a methodology that accounts for compositional constraints to reduce false discoveries in detecting differentially abundant taxa at an ecosystem level, while maintaining high statistical power. Methods: We introduced a novel statistical framework called analysis of composition of microbiomes (ANCOM). ANCOM accounts for the underlying structure in the data and can be used for comparing the composition of microbiomes in two or more populations. ANCOM makes no distributional assumptions and can be implemented in a linear model framework to adjust for covariates as well as model longitudinal data. ANCOM also scales well to compare samples involving thousands of taxa. Results: We compared the performance of ANCOM to the standard t-test and a recently published methodology called Zero Inflated Gaussian (ZIG) methodology (1) for drawing inferences on the mean taxa abundance in two or more populations. ANCOM controlled the false discovery rate (FDR) at the desired nominal level while also improving power, whereas the t-test and ZIG had inflated FDRs, in some instances as high as 68\% for the t-test and 60\% for ZIG. We illustrate the performance of ANCOM using two publicly available microbial datasets in the human gut, demonstrating its general applicability to testing hypotheses about compositional differences in microbial communities. Conclusion: Accounting for compositionality using log-ratio analysis results in significantly improved inference in microbiota survey data.},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/Z2JYHTAK/Mandal et al. - 2015 - Analysis of composition of microbiomes a novel me.pdf}
 }
@@ -1142,7 +1125,7 @@
                   normalisation and visualisation of single-cell
                   {R}{N}{A}-seq data in {R}},
   journal =	 {Bioinformatics},
-  year =	 2017,
+  year =	 {2017},
   volume =	 33,
   issue =	 8,
   pages =	 {1179-1186},
@@ -1152,7 +1135,7 @@
 @article{Sprockett2020,
   title = {Microbiota Assembly, Structure, and Dynamics among {{Tsimane}} Horticulturalists of the {{Bolivian Amazon}}},
   author = {Sprockett, Daniel D. and Martin, Melanie and Costello, Elizabeth K. and Burns, Adam R. and Holmes, Susan P. and Gurven, Michael D. and Relman, David A.},
-  year = 2020,
+  year =	 {2020},
   month = dec,
   journal = {Nat Commun},
   volume = {11},
@@ -1160,7 +1143,6 @@
   pages = {3772},
   issn = {2041-1723},
   doi = {10.1038/s41467-020-17541-6},
-  abstract = {Abstract             Selective and neutral forces shape human microbiota assembly in early life. The Tsimane are an indigenous Bolivian population with infant care-associated behaviors predicted to increase mother-infant microbial dispersal. Here, we characterize microbial community assembly in 47 infant-mother pairs from six Tsimane villages, using 16S rRNA gene amplicon sequencing of longitudinal stool and tongue swab samples. We find that infant consumption of dairy products, vegetables, and chicha (a fermented drink inoculated with oral microbes) is associated with stool microbiota composition. In stool and tongue samples, microbes shared between mothers and infants are more abundant than non-shared microbes. Using a neutral model of community assembly, we find that neutral processes alone explain the prevalence of 79\% of infant-colonizing microbes, but explain microbial prevalence less well in adults from river villages with more regular access to markets. Our results underscore the importance of neutral forces during microbiota assembly. Changing lifestyle factors may alter traditional modes of microbiota assembly by decreasing the role of neutral processes.},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
@@ -1172,7 +1154,7 @@
   volume={6},
   number={1},
   pages={1--14},
-  year=2018,
+  year =	 {2018},
   publisher={Springer}
 }
 
@@ -1183,14 +1165,14 @@
   volume={10},
   number={4},
   pages={e1003531},
-  year=2014,
+  year =	 {2014},
   publisher={Public Library of Science San Francisco, USA}
 }
 
 @Manual{patchwork2022,
     title = {patchwork: The Composer of Plots},
     author = {Thomas Lin Pedersen},
-    year = 2022,
+    year =	 {2022},
     note = {https://patchwork.data-imaginist.com,
 https://github.com/thomasp85/patchwork},
   }
@@ -1199,7 +1181,7 @@ https://github.com/thomasp85/patchwork},
   title = {Displaying {{Variation}} in {{Large Datasets}}: {{Plotting}} a {{Visual Summary}} of {{Effect Sizes}}},
   shorttitle = {Displaying {{Variation}} in {{Large Datasets}}},
   author = {Gloor, Gregory B. and Macklaim, Jean M. and Fernandes, Andrew D.},
-  year = 2016,
+  year =	 {2016},
   month = jul,
   journal = {Journal of Computational and Graphical Statistics},
   volume = {25},
@@ -1207,7 +1189,6 @@ https://github.com/thomasp85/patchwork},
   pages = {971--979},
   issn = {1061-8600, 1537-2715},
   doi = {10.1080/10618600.2015.1131161},
-  abstract = {Displaying the component-wise between-group differences high-dimensional datasets is problematic because widely used plots such as Bland-Altman and Volcano plots do not show what they are colloquially believed to show. Thus, it is difficult for the experimentalist to grasp why the between-group difference of one component is `significant' while that of another component is not. Here we propose a type of `Effect Plot' that displays between-group differences in relation to respective underlying variability for every component of a high-dimensional dataset. We use synthetic data to show that such a plot captures the essence of what determines `significance' for between-group differences in each component, and provide guidance in the interpretation of the plot. Supplementary online materials contain the code and data for this paper, and includes simple R functions to produce an effect plot from suitable datasets.},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/RE6XBPGQ/Gloor et al. - 2016 - Displaying Variation in Large Datasets Plotting a.pdf}
 }
@@ -1216,7 +1197,7 @@ https://github.com/thomasp85/patchwork},
   title = {{{LinDA}}: Linear Models for Differential Abundance Analysis of Microbiome Compositional Data},
   shorttitle = {{{LinDA}}},
   author = {Zhou, Huijuan and He, Kejun and Chen, Jun and Zhang, Xianyang},
-  year = 2022,
+  year =	 {2022},
   month = dec,
   journal = {Genome Biology},
   volume = {23},
@@ -1224,7 +1205,6 @@ https://github.com/thomasp85/patchwork},
   pages = {95},
   issn = {1474-760X},
   doi = {10.1186/s13059-022-02655-5},
-  abstract = {Differential abundance analysis is at the core of statistical analysis of microbiome data. The compositional nature of microbiome sequencing data makes false positive control challenging. Here, we show that the compositional effects can be addressed by a simple, yet highly flexible and scalable, approach. The proposed method, LinDA, only requires fitting linear regression models on the centered log-ratio transformed data, and correcting the bias due to compositional effects. We show that LinDA enjoys asymptotic FDR control and can be extended to mixed-effect models for correlated microbiome data. Using simulations and real examples, we demonstrate the effectiveness of LinDA.},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/6A7ZLDAB/Zhou et al. - 2022 - LinDA linear models for differential abundance an.pdf;/Users/henrikeckermann/Zotero/storage/ZF97UC86/s13059-022-02655-5.pdf}
 }
